# fastslow

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: launch_ddp.sh
src/fastslow/: __init__.py  data.py  models.py  tracking.py  train.py
tests/: test_data.py  test_models.py  test_tracking.py
